# PythonDeveloper

./: .gitignore  README.md  scratchpad.md  scratchpad2.md
FARMStackWebPortal/: .gitignore  README.md
FARMStackWebPortal/docs/: CMakeCache.txt  ProjectStructure.md  README.md  References.md  Scratchpad2.md  flowexecution.md
FARMStackWebPortal/docs/AUTHORS/: termsandconditions.js
backend/: README.md  pyproject.toml
docs/: CHANGELOG.md  SECURITY.md
docs/AUTHORS/: AUTHORS.md
